api spec updated
