# api/swagger.yml
@@ -12,18 +12,18 @@ basePath: "/"
 tags:
   - name: "users"
     description: "Operations about authorization"
-  - name: "profile"
-    description: "Operations about user"
   - name: "portfolios"
     description: "Operations about portfolio"
-  - name: "market"
+  - name: "stockmarket"
     description: "Operations about stocks"
+  - name: "deals"
+    description: "Operations about deals"
 paths:
   /signup:
     post:
       tags:
         - "users"
-      summary: "Create new user into the system"
+      summary: "Create new local user into the system"
       description: ""
       operationId: "CreateUser"
       consumes:
@@ -38,20 +38,17 @@ paths:
           schema:
             $ref: "#/definitions/CreateUserRequest"
       responses:
-        "200":
-          description: "successful operation"
+        "201":
+          description: "User created"
           schema:
             $ref: "#/definitions/CreateUserResponse"
-        "400":
-          description: ""
-        "401":
-          description: ""
+        "500":
+          description: "Creating user error"
   /signin:
     post:
       tags:
         - "users"
-      summary: "Log user into the system"
-      description: ""
+      summary: "Login local user into the system"
       operationId: "loginUser"
       consumes:
         - "application/json"
@@ -61,24 +58,38 @@ paths:
         - name: "body"
           in: body
           required: true
-          description: ""
           schema:
             $ref: "#/definitions/LoginRequest"
       responses:
         "200":
-          description: "successful operation"
-          schema:
-            $ref: "#/definitions/LoginResponse"
-        "400":
-          description: "OAuth general error"
+          description: "Login successful"
+        "500":
+          description: "Error on parsing request"
         "401":
-          description: "Unauthorized"
+          description: "Authentication failure"
+  /user:
+    get:
+      tags:
+        - "users"
+      summary: "Get current user info"
+      operationId: "GetUser"
+      produces:
+        - "application/json"
+      parameters: [ ]
+      responses:
+        "200":
+          description: "OK"
+          schema:
+            $ref: "#/definitions/CreateUserResponse"
+        "500":
+          description: "can't parse cookie"
+        "401":
+          description: "not logined"
   /signout:
     post:
       tags:
         - "users"
       summary: "Log out current user"
-      description: ""
       operationId: "logoutUser"
       produces:
         - "application/json"
@@ -86,56 +97,42 @@ paths:
       responses:
         "200":
           description: "successful operation"
-  /api/v1/profile:
-    post:
+  /delete:
+    delete:
       tags:
-        - "profile"
-      summary: "Create new profile"
-      description: ""
-      operationId: "createProfile"
-      consumes:
-        - "application/json"
+        - "users"
+      summary: "delete current user"
+      operationId: "deleteUser"
       produces:
         - "application/json"
-      parameters:
-        - name: "body"
-          in: body
-          required: true
-          description: ""
-          schema:
-            $ref: "#/definitions/CreateProfile"
+      parameters: []
       responses:
         "200":
-          description: "successful operation"
-    put:
-      tags:
-        - "profile"
-      summary: "Update profile"
-      description: ""
-      operationId: "updateProfile"
-      consumes:
-        - "application/json"
-      produces:
-        - "application/json"
-      parameters:
-        - name: "body"
-          in: body
-          required: true
-          description: ""
-          schema:
-            $ref: "#/definitions/UpdateProfile"
-      responses:
-        "200":
-          description: "successful operation"
-        "400":
-          description: "Profile update general error"
+          description: "OK"
+        "500":
+          description: "Error deleting user"
+        "401":
+          description: "Authentication failure"
+  /api/v1/portfolios:
     get:
       tags:
-        - "profile"
+        - "portfolios"
+      summary: "Get all portfolios of user"
+      operationId: "getAllPortfolio"
+      produces:
+        - "application/json"
+      parameters: []
       responses:
         "200":
-          description: "successful operation"
-  /api/v1/portfolios:
+          description: "OK"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Portfolio"
+        "401":
+          description: "Not logined"
+        "500":
+          description: "Error on get deals"
     post:
       tags:
         - "portfolios"
@@ -148,7 +145,7 @@ paths:
       parameters:
         - in: "body"
           name: "body"
-          description: "New portfolio object that needs to be added to profile"
+          description: "New portfolio in profile"
           required: true
           schema:
             $ref: "#/definitions/CreatePortfolioReq"
@@ -156,14 +153,15 @@ paths:
         "200":
           description: "OK"
           schema:
-            $ref: "#/definitions/Portfolio"
-        "405":
-          description: "Invalid input"
+            $ref: "#/definitions/PortfolioAssets"
+        "500":
+          description: "Error on creating portfolio"
+        "401":
+          description: "Not logined"
     put:
       tags:
         - "portfolios"
       summary: "Update an existing portfolio"
-      description: ""
       operationId: "updatePortfolio"
       consumes:
         - "application/json"
@@ -181,19 +179,16 @@ paths:
           description: "OK"
           schema:
             $ref: "#/definitions/Portfolio"
-        "400":
-          description: "Invalid ID supplied"
-        "404":
-          description: "Portfolio not found"
-        "405":
-          description: "Validation exception"
+        "500":
+          description: "Error on updating portfolio"
+        "401":
+          description: "Not logined"
   /api/v1/portfolios/{portfolioId}:
     get:
       tags:
         - "portfolios"
-      summary: "Find portfolio by ID"
-      description: "Returns a single portfolio"
-      operationId: "getPortfolioById"
+      summary: "Get portfolio deals"
+      operationId: "getPortfolioDealsById"
       produces:
         - "application/json"
       parameters:
@@ -202,16 +197,15 @@ paths:
           description: "ID of portfolio to return"
           required: true
           type: "integer"
-          format: "int64"
       responses:
         "200":
-          description: "successful operation"
+          description: "OK"
           schema:
-            $ref: "#/definitions/Portfolio"
-        "400":
-          description: "Invalid ID supplied"
-        "404":
-          description: "Portfolio not found"
+            $ref: "#/definitions/PortfolioDeals"
+        "401":
+          description: "Not logined"
+        "500":
+          description: "Error on get deals"
     delete:
       tags:
         - "portfolios"
@@ -226,29 +220,45 @@ paths:
           description: "Portfolio id to delete"
           required: true
           type: "integer"
-          format: "int64"
       responses:
-        "400":
-          description: "Invalid ID supplied"
-        "404":
-          description: "Portfolio not found"
-  /api/v1/market/stocks:
+        "200":
+          description: "OK"
+        "401":
+          description: "Not logined"
+        "500":
+          description: "Error on deleting portfolio"
+  /api/v1/portfolios/closed/{portfolioId}:
     get:
       tags:
-        - "market"
-      summary: "Get information about stocks"
-      description: ""
-      operationId: "getStocks"
-      consumes:
-        - "application/json"
+        - "portfolios"
+      summary: "Get portfolio closed deals"
+      operationId: "getPortfolioClosedDealsById"
       produces:
         - "application/json"
       parameters:
-        - in: "body"
-          name: "body"
-          description: "Stocks to search"
+        - name: "portfolioId"
+          in: "path"
+          description: "ID of portfolio to return"
+          required: true
+          type: "integer"
+      responses:
+        "200":
+          description: "OK"
           schema:
-            $ref: "#/definitions/Search"
+            $ref: "#/definitions/PortfolioDeals"
+        "401":
+          description: "Not logined"
+        "500":
+          description: "Error on get closed deals"
+  /api/v1/stockmarket/:
+    get:
+      tags:
+        - "stockmarket"
+      summary: "Get information about all stocks"
+      operationId: "getStocks"
+      produces:
+        - "application/json"
+      parameters: [ ]
       responses:
         "200":
           description: "OK"
@@ -256,16 +266,13 @@ paths:
             type: "array"
             items:
               $ref: "#/definitions/Stock"
-        "405":
-          description: "Invalid input"
-        "404":
-          description: "Stocks not found"
-  /api/v1/market/deals:
+        "500":
+          description: "Error on get stocks"
+  /api/v1/stockmarket/deal:
     post:
       tags:
-        - "market"
-      summary: "Add deal"
-      description: ""
+        - "stockmarket"
+      summary: "Add new deal to portfolio"
       operationId: "addDeal"
       consumes:
         - "application/json"
@@ -274,26 +281,180 @@ paths:
       parameters:
         - in: "body"
           name: "body"
-          description: "Deal to add"
           schema:
-            $ref: "#/definitions/Deal"
+            $ref: "#/definitions/CreateDeal"
       responses:
-        "400":
-          description: "General error"
-        "405":
-          description: "Invalid input"
-        "404":
-          description: ""
+        "401":
+          description: "Not logined"
+        "500":
+          description: "Error on creating new deal"
+  /api/v1/stockmarket/{stockId}:
+    get:
+      tags:
+        - "stockmarket"
+      summary: "Get information about one stock"
+      operationId: "getStock"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "stockId"
+          in: "path"
+          description: "ID of stock"
+          required: true
+          type: "integer"
+      responses:
+        "200":
+          description: "OK"
+          schema:
+            $ref: "#/definitions/Deals"
+        "500":
+          description: "Error on getting stock"
+  /api/v1/deals/{dealId}:
+    get:
+      tags:
+        - "deals"
+      summary: "Get information about one deal"
+      operationId: "getDeal"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "dealId"
+          in: "path"
+          description: "ID of deal"
+          required: true
+          type: "integer"
+      responses:
+        "200":
+          description: "OK"
+          schema:
+            $ref: "#/definitions/Deals"
+        "500":
+          description: "Error on getting deal"
+    post:
+      tags:
+        - "deals"
+      summary: "Close deal"
+      operationId: "closeDeal"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "dealId"
+          in: "path"
+          description: "ID of closing deal"
+          required: true
+          type: "integer"
+      responses:
+        "200":
+          description: "OK"
+        "401":
+          description: "Not logined"
+        "500":
+          description: "Error on closing deal"
+    delete:
+      tags:
+        - "deals"
+      summary: "Delete a deal"
+      description: ""
+      operationId: "deleteDeal"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "dealId"
+          in: "path"
+          description: "Deal id to delete"
+          required: true
+          type: "integer"
+      responses:
+        "200":
+          description: "OK"
+        "401":
+          description: "Not logined"
+        "500":
+          description: "Error on deleting deal"
+  /api/v1/closed/{closedDealId}:
+    get:
+      tags:
+        - "deals"
+      summary: "Get information about one closes deal"
+      operationId: "getClosedDeal"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "closedDealId"
+          in: "path"
+          description: "ID of closed deal"
+          required: true
+          type: "integer"
+      responses:
+        "200":
+          description: "OK"
+          schema:
+            $ref: "#/definitions/Deals"
+        "500":
+          description: "Error on getting closed deal"
+    delete:
+      tags:
+        - "deals"
+      summary: "Delete a closed deal"
+      description: ""
+      operationId: "deleteClosedDeal"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "closedDealId"
+          in: "path"
+          description: "Closed deal id to delete"
+          required: true
+          type: "integer"
+      responses:
+        "200":
+          description: "OK"
+        "401":
+          description: "Not logined"
+        "500":
+          description: "Error on deleting closed deal"
 definitions:
+  CreateUserRequest:
+    type: "object"
+    properties:
+      name:
+        type: "string"
+      lastname:
+        type: "string"
+      username:
+        type: "string"
+      email:
+        type: "string"
+      password:
+        type: "string"
+  CreateUserResponse:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+      name:
+        type: "string"
+      lastname:
+        type: "string"
+      username:
+        type: "string"
+      email:
+        type: "string"
+      password:
+        type: "string"
+        description: "password hash"
   LoginRequest:
     type: "object"
     properties:
-      JWT:
+      email:
         type: "string"
-  LoginResponse:
-    type: "object"
-    properties:
-      JWT:
+      password:
         type: "string"
   CreateProfile:
     type: "object"
@@ -310,27 +471,25 @@ definitions:
     properties:
       id:
         type: "integer"
-        format: "int64"
       username:
         type: "string"
       userStatus:
         type: "integer"
-        format: "int32"
         description: "User Status"
   CreatePortfolioReq:
     type: "object"
     properties:
       name:
         type: "string"
+      description:
+        type: "string"
       public:
         type: "boolean"
-        default: false
   UpdatePortfolioReq:
     type: "object"
     properties:
       id:
         type: "integer"
-        format: "int64"
       name:
         type: "string"
       public:
@@ -340,34 +499,111 @@ definitions:
     properties:
       id:
         type: "integer"
-        format: "int64"
       name:
         type: "string"
       public:
         type: "boolean"
-        default: false
-      stocks:
-        type: "array"
-        items:
-          $ref: "#/definitions/Stock"
-      cash:
+      assets_rub:
+        type: "number"
+        format: "float"
+      assets_usd:
+        type: "number"
+        format: "float"
+      assets_eur:
+        type: "number"
+        format: "float"
+      profit_rub:
+        type: "number"
+        format: "float"
+      profit_usd:
+        type: "number"
+        format: "float"
+      profit_eur:
+        type: "number"
+        format: "float"
+      percent_rub:
+        type: "number"
+        format: "float"
+      percent_usd:
+        type: "number"
+        format: "float"
+      percent_eur:
+        type: "number"
+        format: "float"
+  OnePortfolio:
+    type: "object"
+    properties:
+      name:
+        type: "string"
+      description:
+        type: "string"
+      is_public:
+        type: "boolean"
+  PortfolioDeals:
+    type: "object"
+    properties:
+      PortfolioResp:
+        $ref: "#/definitions/OnePortfolio"
+      DealResp:
+        type: array
+        $ref: "#/definitions/Deals"
+  Deals:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+      ticker:
+        type: "string"
+      name:
+        type: "string"
+      type:
+        type: "string"
+        enum: [bond, stock, fund]
+      description:
+        type: "string"
+      amount:
+        type: "integer"
+      cost:
+        type: "number"
+        format: "float"
+      value:
+        type: "number"
+        format: "float"
+      currency:
+        type: "string"
+        enum: [usd, eur, rub]
+      opened_at:
+        type: "string"
+        format: "date-time"
+      closed_at:
+        type: "string"
+        format: "date-time"
+      buy_cost:
+        type: "number"
+        format: "float"
+      sell_cost:
+        type: "number"
+        format: "float"
+      profit:
+        type: "number"
+        format: "float"
+      percent:
         type: "number"
         format: "float"
   Stock:
     type: "object"
     properties:
       id:
+        type: "integer"
+      ticker:
         type: "string"
-        description: "ticker"
       name:
         type: "string"
-        description: "name of stock"
-      summary:
-        type: "string"
-        description: "info about the stock"
       type:
         type: "string"
-        enum: [bond, stock, fund]
+        enum: [ bond, stock, fund ]
+      description:
+        type: "string"
       cost:
         type: "number"
         format: "float"
@@ -377,20 +613,14 @@ definitions:
   Search:
     type: "string"
     description: "search string"
-  Deal:
+  CreateDeal:
     type: "object"
     properties:
-      id:
+      stock_id:
         type: "number"
-        format: "int64"
-        description: "id of deal"
-      type:
-        type: "string"
-        enum: [buy, sell]
-        description: "type of deal"
-      lot:
-        type: "string"
-        description: "ticker"
-      quantity:
-        type: "number"
-        format: "int64"
+        description: "id of stock"
+      amount:
+        type: "integer"
+        description: "amount of stocks"
+      portfolio_id:
+        type: "integer"
