# internal/handlers/handlers.go
@@ -4,7 +4,10 @@ import (
 	"context"
 	"github.com/labstack/echo/v4"
 	"github.com/labstack/echo/v4/middleware"
+	//v3 "github.com/swaggest/swgui/v3"
 	"github.com/veremchukvv/stonks-test/internal/service"
+	//"net/http"
+	//"github.com/swaggest/swgui/v3emb"
 )
 
 type Handler struct {
@@ -50,7 +53,7 @@ func (h *Handler) InitRoutes() *echo.Echo {
 	//		profile.DELETE("/:id", h.deleteProfile)
 	//	}
 
-	portfolio := e.Group("/api/v1/portfolio")
+	portfolio := e.Group("/api/v1/portfolios")
 	{
 		portfolio.POST("/", h.createPortfolio)
 		portfolio.GET("/", h.getAllPortfolios)
@@ -81,6 +84,16 @@ func (h *Handler) InitRoutes() *echo.Echo {
 		market.DELETE("/deal/:id", h.deleteDeal)
 
 	}
+
+	//fs := http.FileServer(http.Dir("dist"))
+
+
+	//swagger := e.Group("docs")
+	//{
+	//	//swagger.GET("/", v3.NewHandler("/", "", "") )
+	//	swagger.GET("/", v3.NewHandler)
+	//}
+	////swaggerUrl := echoSwagger.URL("http://localhost:1323/swagger/doc.json")
 
 	return e
 }
